--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,7 @@
 <wb-module deploy-name="matte">
 <wb-resource deploy-path="/" source-path="/web"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+<wb-resource deploy-path="/WEB-INF/classes" source-path="/src-applet"/>
 <property name="context-root" value="matte"/>
 <property name="java-output-path" value="build/classes"/>
 </wb-module>
