--- a/src-applet/magoffin/matt/ma2/web/applet/UploadMedia.form
+++ b/src-applet/magoffin/matt/ma2/web/applet/UploadMedia.form
@@ -271,6 +271,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Add"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
