--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -1,1 +1,11 @@
-/* TODO */
+h1 {
+	margin-bottom: 12px !important;
+}
+
+.album-details p {
+	font-size: 18px;
+}
+
+.album-details .album-info {
+	font-size: 14px;
+}
