Only show comments of selected child album.

--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -25,6 +25,11 @@ h2 {
 .album-details ul p {
 	font-size: 16px;
 	margin-bottom: 0;
+	display: none;
+}
+
+.album-details ul .selected p {
+	display: inherit;
 }
 
 /*
