Tweak space after info details.

--- a/matte-web/web/WEB-INF/themes/core/swipe/css/browse.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/browse.css
@@ -81,6 +81,7 @@ p {
 	font-family: 'Alegreya Sans', sans-serif;
 	font-weight: 300;
 	color: #5D564A;
+	margin-bottom: 6px;
 }
 
 .browse-album p {
