--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -53,3 +53,23 @@ h2 {
 .album-details .album-info {
 	font-size: 14px;
 }
+
+.video-slide {
+	text-align: center;
+}
+
+.video-slide video {
+	margin: 5%;
+	max-width: 90%;
+	max-height: 90%;
+}
+
+button.video-play-button {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	width: 44px;
+	height: 44px;
+	margin-left: -22px;
+	margin-top: -22px;
+}
