Work on video integration.

--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -73,4 +73,5 @@ button.video-play-button {
 	height: 44px;
 	margin-left: -22px;
 	margin-top: -22px;
+	background-color: rgba(90%,90%,90%,0.8);
 }
