--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -75,3 +75,15 @@ button.video-play-button {
 	margin-top: -22px;
 	background-color: rgba(90%,90%,90%,0.8);
 }
+
+.item-actions {
+	background: none;
+}
+
+.item-actions button {
+	width: 44px;
+	height: 44px;
+	background: none;
+	color: white;
+	border: none;
+}
