Fix to never render PhotoSwipe default background in custom cog button.

--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -77,7 +77,8 @@ button.video-play-button {
 }
 
 .item-actions {
-	background: none;
+	background-image: none !important;
+	background: none !important;
 }
 
 .item-actions button {
