Add play/pause toggle button for slideshow.

--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -85,7 +85,8 @@ button.video-play-button {
 	background: none !important;
 }
 
-.item-actions button {
+.item-actions button,
+button.item-actions {
 	width: 44px;
 	height: 44px;
 	background: none;
