--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -71,13 +71,27 @@ a.action {
 
 button.video-play-button {
 	position: absolute;
-	top: 50%;
-	left: 50%;
-	width: 44px;
-	height: 44px;
-	margin-left: -22px;
-	margin-top: -22px;
-	background-color: rgba(90%,90%,90%,0.8);
+	top: 10%;
+	left: 10%;
+	width: 80%;
+	height: 80%;
+	color: rgba(90%,90%,90%,0.8);
+	background-color: transparent;
+	font-size: 44px;
+	line-height: 52px;
+	border: none;
+	-webkit-box-shadow: none !important;
+	-moz-box-shadow:    none !important;
+	box-shadow:         none !important;
+}
+
+button.video-play-button:hover {
+	background-color: transparent;
+	color: #23527c;
+}
+
+button.transparent {
+	color: transparent !important;
 }
 
 .item-actions {
