--- a/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
+++ b/matte-web/web/WEB-INF/themes/core/swipe/css/album.css
@@ -39,6 +39,14 @@ a.action {
 	background-color: #EEECE8;
 }
 
+.album-details li .album-info {
+	float: right;
+	margin-top: 5px;
+	margin-left: 8px;
+	margin-bottom: 0;
+	margin-right: 0;
+}
+
 #album-hierarchy > li {
 	padding-left: 15px;
 }
